--- a/style.css
+++ b/style.css
@@ -76,3 +76,38 @@ img {
     width: 500px;
     height: 220px;
 }
+.mid-title {
+    font-weight: bolder;
+    font-size: 36px;
+    color: #1F2937;
+    padding: 36px;
+    display: flex;
+    justify-content: center;
+}
+.images-text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+.combine {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+}
+.combine div {
+    width: 150px;
+    height: 150px;
+    overflow: auto;
+    color: #1F2937;
+    font-weight: lighter;
+}
+.combine img {
+    border: 3px solid #3882f6;
+    width: 140px;
+    height: 140px;
+    border-radius: 15px;
+    display: block;
+}
