--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ img {
     justify-content: space-between;
     flex: 1;
 }
-.sign-up-low {
+.pumpkin {
     font-weight: bolder;
     color: #f9faf8;
     margin-right: 80px;
@@ -151,10 +151,10 @@ img {
     height: 30px;
     transition: 0.3s;
 }
-.sign-up-low:hover {
+.pumpkin:hover {
     opacity: 0.7;
 }
-.sign-up-low:active {
+.pumpkin:active {
     opacity: 0.15;
 }
 .footer {
